--- a/pom.xml
+++ b/pom.xml
@@ -16,13 +16,9 @@
         <maven.compiler.target>11</maven.compiler.target>
         <restassured.version>4.5.0</restassured.version>
         <selenium.version>4.26.0</selenium.version>
-        <extentreport.version>5.0.8</extentreport.version>
-        <cucumber.version>7.14.0</cucumber.version>
-        <awaitility.version>4.1.1</awaitility.version>
-        <jackson.version>2.13.1</jackson.version>
-        <assertjcore.version>3.21.0</assertjcore.version>
         <testng.version>7.8.0</testng.version>
-        <logback.version>1.4.11</logback.version>
+        <logback.version>1.5.13</logback.version>
+        <log4j.version>1.7.32</log4j.version>
     </properties>
 
     <dependencies>
@@ -48,50 +44,23 @@
             <scope>test</scope>
         </dependency>
 
-        <!-- ExtentReports for Reporting -->
         <dependency>
-            <groupId>com.aventstack</groupId>
-            <artifactId>extentreports</artifactId>
-            <version>${extentreport.version}</version>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>${log4j.version}</version>
         </dependency>
 
-        <!-- Cucumber for BDD -->
-        <dependency>
-            <groupId>io.cucumber</groupId>
-            <artifactId>cucumber-java</artifactId>
-            <version>${cucumber.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.cucumber</groupId>
-            <artifactId>cucumber-testng</artifactId>
-            <version>${cucumber.version}</version>
-        </dependency>
 
-        <!-- Awaitility for Async Testing -->
-        <dependency>
-            <groupId>org.awaitility</groupId>
-            <artifactId>awaitility</artifactId>
-            <version>${awaitility.version}</version>
-        </dependency>
-
-        <!-- Jackson for JSON Parsing -->
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>${jackson.version}</version>
-        </dependency>
-
-        <!-- AssertJ for Fluent Assertions -->
-        <dependency>
-            <groupId>org.assertj</groupId>
-            <artifactId>assertj-core</artifactId>
-            <version>${assertjcore.version}</version>
-        </dependency>
-
+        <!-- Logback for Logging -->
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>${logback.version}</version> <!-- Use the latest stable version -->
+            <version>${logback.version}</version>
         </dependency>
     </dependencies>
 
@@ -103,19 +72,14 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.22.2</version>
                 <configuration>
-                    <includes>
-                        <include>**/*Test.java</include>
-                    </includes>
-                    <properties>
-                        <property>
-                            <name>usedefaultlisteners</name>
-                            <value>false</value>
-                        </property>
-                    </properties>
+                    <!-- TestNG suite file -->
+                    <suiteXmlFiles>
+                        <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
+                    </suiteXmlFiles>
                 </configuration>
             </plugin>
 
-<!--             Maven Compiler Plugin -->
+            <!-- Maven Compiler Plugin -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
